# lynxy

./: .gitignore  LICENSE  README.md  client.py  client_and_server.py  codeql-config.yml   game_testing.py  pyproject.toml  req2.txt  requirements.txt  server.py  sockserver.py  t_recieving.py  t_sending.py  test-client.py  test-server.py  test.py  test1.py  test2.py  test3.py  testlocal.py  testlocal2.py  testlocal3.py  testrun.py  video_reciever.py  video_sender.py  z.py
.github/workflows/: codeql.yml
.github/workflows/codeql/: codeql.yml  config.yml
.inactive/testpypi/: lynxy-0.1.11-py3-none-any.whl  lynxy-0.1.18-py3-none-any.whl
.old/pypi/: lynxy-0.0.1-py3-none-any.whl
_inactive/testpypi/: lynxy-0.1.17-py3-none-any.whl  lynxy-0.1.7-py3-none-any.whl
_old/pypi/: lynxy-0.0.2-py3-none-any.whl
_old/testpypi/: lynxy-0.1.2-py3-none-any.whl  lynxy-0.1.9-py3-none-any.whl
docs/github/: data.md  events.md  examples.md  functions.md  lynxy.md  version key.md
docs/github/changelogs/: experimental_changelog.md  release_changelog.md
docs/pypi/: PyPi_info.md
docs/txt/: comm links.txt  links.txt
docs/txt/diagrams/: file.txt
documentation/github/: lynxy.md
documentation/github/shared/: ports.md
documentation/pypi/: PyPi_info.md
ignore/: comm links.txt  notes.txt  re org todo.txt  todo.txt
ignore/saves/12_19_2024-10_05am/lynxy_server/: pyproject.toml
info/GitHub/changelogs/: changelog.md
info/github/: lynxy.md  lynxy_server.md
info/github/changelogs/: experimental_changelog.md  release_changelog.md
info/pypi/: PyPi_info.md
info/txt/: links.txt  sources.txt
pyprojects/lynxy/: pyproject.toml
saves/12_19_2024-10_05am/: notes.txt
saves/7_31_2024-1_29am/: notes.txt
src/lynxy/: OLD.py  __init__.py  comm.py  config.json  constants.py  data.json  errors.py  exceptions.py  inbound_start.py  lynx.py  parser.py  pool.py  requirements.txt  sec.py
src/lynxy/connection_tools/: client_handler.py
src/lynxy/txt/: diagram.txt  sources.txt  todo.txt
src/lynxy/unused/: funcs.py
src/lynxy_server/: __init__.py  lynx_server copy.py  lynx_server.py  responses.py  toggles.py
tests/: NOTE.txt  new_server.py  server.py  test2.py  valid_ports.py
tests/remote control/: t_recieving.py
tests/send_video/: video_sender.py
tests/sock/: modclient.py  sockserver.py
tests/texting/: test1.py  test2.py
