[build-system]
requires = [
    "hatchling",
    "cryptography",
    "cffi",

    "rsa",
    "pyasn1"

    # ???
    # "setuptools"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/lynxy"
]

[project]
name = "lynxy"
version = "0.1.21" # test pypi release
# version = "0.0.5" # pypi release 
authors = [
  { name="Sketched Doughnut", email="sketcheddoughnut@gmail.com" },
]
description = "A LAN package made for easy communication and sending of data across the same network."
readme = "info/pypi/PyPi_info.md"
# requires-python = ">=3.10" 
requires-python = ">=3.9" # changing which version it needs for test pypi, might keep for release for now - do note this release version works for linux(?) (python3)
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography",
    "cffi",

    "rsa",
    "pyasn1",

     # ???
    "setuptools"
]

[project.urls]
Homepage = "https://github.com/SketchedDoughnut/lynxy"
Issues = "https://github.com/SketchedDoughnut/lynxy/issues"
